--- a/MarvelApp/MarvelApp/Register/Register.storyboard
+++ b/MarvelApp/MarvelApp/Register/Register.storyboard
@@ -11,7 +11,7 @@
         <!--RegisterVC-->
         <scene sceneID="TaR-kb-2Fa">
             <objects>
-                <viewController id="I58-SI-UtH" customClass="RegisterVC" customModule="MarvelApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Register" modalPresentationStyle="fullScreen" id="I58-SI-UtH" customClass="RegisterVC" customModule="MarvelApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="a6P-nY-ExG">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
