--- a/MarvelApp/MarvelApp/Detail/Character Detail/CharacterDetail.storyboard
+++ b/MarvelApp/MarvelApp/Detail/Character Detail/CharacterDetail.storyboard
@@ -11,22 +11,22 @@
         <!--Character DetailVC-->
         <scene sceneID="NaR-2i-I5k">
             <objects>
-                <viewController id="IXX-Rm-qDr" customClass="CharacterDetailVC" customModule="MarvelApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CharacterDetail" modalPresentationStyle="fullScreen" id="IXX-Rm-qDr" customClass="CharacterDetailVC" customModule="MarvelApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wZ0-DC-kig">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tkv-Fd-02E">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <rect key="frame" x="0.0" y="-44" width="414" height="940"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="X5F-8u-Nus"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="tkv-Fd-02E" firstAttribute="top" secondItem="wZ0-DC-kig" secondAttribute="top" id="4Kw-gv-h0C"/>
                             <constraint firstItem="tkv-Fd-02E" firstAttribute="leading" secondItem="X5F-8u-Nus" secondAttribute="leading" id="GVO-sa-8cs"/>
                             <constraint firstAttribute="bottom" secondItem="tkv-Fd-02E" secondAttribute="bottom" id="Wvb-di-2Q9"/>
+                            <constraint firstItem="tkv-Fd-02E" firstAttribute="top" secondItem="wZ0-DC-kig" secondAttribute="top" constant="-44" id="hl0-4R-pRD"/>
                             <constraint firstItem="tkv-Fd-02E" firstAttribute="trailing" secondItem="X5F-8u-Nus" secondAttribute="trailing" id="ppg-A8-Yzx"/>
                         </constraints>
                     </view>
