--- a/MarvelApp/MarvelApp/Detail/Character Detail/TableViewCell/HeaderTableViewCell.xib
+++ b/MarvelApp/MarvelApp/Detail/Character Detail/TableViewCell/HeaderTableViewCell.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -10,37 +10,37 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeaderTableViewCell" rowHeight="671" id="KGk-i7-Jjw" customClass="HeaderTableViewCell" customModule="MarvelApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="390" height="671"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeaderTableViewCell" rowHeight="718" id="KGk-i7-Jjw" customClass="HeaderTableViewCell" customModule="MarvelApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="390" height="718"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="390" height="671"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="390" height="718"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Imagem 65" translatesAutoresizingMaskIntoConstraints="NO" id="2Ux-WJ-ItJ">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="250"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Imagem 55" translatesAutoresizingMaskIntoConstraints="NO" id="2Ux-WJ-ItJ">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="246"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="250" id="sRb-bs-BPw"/>
+                            <constraint firstAttribute="height" constant="246" id="sRb-bs-BPw"/>
                         </constraints>
                     </imageView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p15-i1-lgg">
-                        <rect key="frame" x="0.0" y="174" width="390" height="497"/>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p15-i1-lgg">
+                        <rect key="frame" x="0.0" y="201" width="415" height="516"/>
                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="497" id="hZs-Iy-AcU"/>
+                            <constraint firstAttribute="height" constant="516" id="bo8-ck-Pf9"/>
                         </constraints>
                     </view>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="JE9-NX-mKH">
-                        <rect key="frame" x="30" y="196" width="330" height="230.5"/>
+                        <rect key="frame" x="40" y="229" width="310" height="230.66666666666663"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NOME PERSONAGEM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jRS-9T-COa">
-                                <rect key="frame" x="0.0" y="0.0" width="330" height="20.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="310" height="20.333333333333332"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TEMPESTADEEEEE" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mti-yc-F6c">
-                                <rect key="frame" x="0.0" y="21.5" width="330" height="116"/>
+                                <rect key="frame" x="0.0" y="21.333333333333343" width="310" height="116"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="116" id="h1X-hg-tyb"/>
                                 </constraints>
@@ -49,23 +49,23 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="yxF-He-Aa0">
-                                <rect key="frame" x="0.0" y="138.5" width="330" height="30"/>
+                                <rect key="frame" x="0.0" y="138.33333333333331" width="310" height="30"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HOG-ds-TRb">
-                                        <rect key="frame" x="0.0" y="12.5" width="192" height="5"/>
+                                        <rect key="frame" x="0.0" y="12.666666666666686" width="172.33333333333334" height="5"/>
                                         <color key="backgroundColor" systemColor="systemBlueColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="5" id="F7Q-UO-AEC"/>
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorited Character" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bmf-2A-V4Y">
-                                        <rect key="frame" x="195" y="8" width="112" height="14.5"/>
+                                        <rect key="frame" x="175.33333333333334" y="8" width="111.66666666666666" height="14.333333333333336"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" red="0.57647866010000004" green="0.57645630839999995" blue="0.5764713883" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jUa-8D-Evr">
-                                        <rect key="frame" x="310" y="4" width="20" height="22"/>
+                                        <rect key="frame" x="290" y="4" width="20" height="22"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="CrH-VT-kUJ"/>
                                         </constraints>
@@ -79,7 +79,7 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descricaoooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iqP-V8-tZj">
-                                <rect key="frame" x="0.0" y="169.5" width="330" height="61"/>
+                                <rect key="frame" x="0.0" y="169.33333333333331" width="310" height="61.333333333333343"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -88,40 +88,59 @@
                         <constraints>
                             <constraint firstItem="yxF-He-Aa0" firstAttribute="leading" secondItem="Mti-yc-F6c" secondAttribute="leading" id="2Uq-tU-cil"/>
                             <constraint firstItem="jRS-9T-COa" firstAttribute="leading" secondItem="JE9-NX-mKH" secondAttribute="leading" id="4AN-Vu-gYR"/>
-                            <constraint firstAttribute="trailing" secondItem="iqP-V8-tZj" secondAttribute="trailing" id="BJ0-Ti-k6X"/>
                             <constraint firstItem="iqP-V8-tZj" firstAttribute="leading" secondItem="JE9-NX-mKH" secondAttribute="leading" id="BTn-cv-pIL"/>
-                            <constraint firstAttribute="trailing" secondItem="jRS-9T-COa" secondAttribute="trailing" id="Gee-eR-Ltz"/>
                             <constraint firstItem="yxF-He-Aa0" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Mti-yc-F6c" secondAttribute="trailing" id="OWu-Ky-oRC"/>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="230.5" id="bR8-7W-iNe"/>
                         </constraints>
                     </stackView>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="aN3-7F-hbP">
+                        <rect key="frame" x="0.0" y="478.66666666666674" width="390" height="224"/>
+                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="224" id="lFE-T3-AwV"/>
+                        </constraints>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="EGP-GP-0NA">
+                            <size key="itemSize" width="128" height="128"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                    </collectionView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="p15-i1-lgg" firstAttribute="top" secondItem="2Ux-WJ-ItJ" secondAttribute="bottom" constant="-76" id="IIJ-3I-vEu"/>
+                    <constraint firstItem="p15-i1-lgg" firstAttribute="leading" secondItem="2Ux-WJ-ItJ" secondAttribute="leading" id="0M2-9f-yje"/>
+                    <constraint firstAttribute="trailing" secondItem="JE9-NX-mKH" secondAttribute="trailing" constant="40" id="8St-vE-gux"/>
+                    <constraint firstItem="aN3-7F-hbP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Cpp-xN-VxC"/>
+                    <constraint firstItem="aN3-7F-hbP" firstAttribute="top" secondItem="JE9-NX-mKH" secondAttribute="bottom" constant="19.329999999999998" id="DcP-Jq-k44"/>
+                    <constraint firstItem="p15-i1-lgg" firstAttribute="top" secondItem="2Ux-WJ-ItJ" secondAttribute="bottom" constant="-45" id="IIJ-3I-vEu"/>
                     <constraint firstItem="2Ux-WJ-ItJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="SL7-Sb-YTv"/>
+                    <constraint firstAttribute="bottom" secondItem="aN3-7F-hbP" secondAttribute="bottom" constant="15" id="Uhy-92-7V9"/>
                     <constraint firstAttribute="bottom" secondItem="p15-i1-lgg" secondAttribute="bottom" id="W0X-JX-qt4"/>
-                    <constraint firstItem="JE9-NX-mKH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="iLM-3u-ygo"/>
+                    <constraint firstItem="p15-i1-lgg" firstAttribute="trailing" secondItem="2Ux-WJ-ItJ" secondAttribute="trailing" constant="25" id="aKY-8E-ele"/>
+                    <constraint firstAttribute="trailing" secondItem="aN3-7F-hbP" secondAttribute="trailing" id="c8y-wb-ikq"/>
+                    <constraint firstItem="JE9-NX-mKH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="40" id="iLM-3u-ygo"/>
                     <constraint firstAttribute="trailing" secondItem="2Ux-WJ-ItJ" secondAttribute="trailing" id="iMq-9n-VtQ"/>
-                    <constraint firstItem="p15-i1-lgg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="koM-Qt-tQk"/>
-                    <constraint firstAttribute="trailing" secondItem="JE9-NX-mKH" secondAttribute="trailing" constant="30" id="oZb-Ep-HyW"/>
                     <constraint firstItem="2Ux-WJ-ItJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="pkr-9I-ty3"/>
-                    <constraint firstItem="JE9-NX-mKH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="185" id="veE-op-Tlf"/>
-                    <constraint firstAttribute="trailing" secondItem="p15-i1-lgg" secondAttribute="trailing" id="vjr-Qi-t2g"/>
+                    <constraint firstItem="JE9-NX-mKH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="218" id="veE-op-Tlf"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="characterImage" destination="2Ux-WJ-ItJ" id="YeA-46-5WB"/>
                 <outlet property="subView" destination="p15-i1-lgg" id="ueT-Vx-ge7"/>
             </connections>
-            <point key="canvasLocation" x="189.85507246376812" y="298.32589285714283"/>
+            <point key="canvasLocation" x="189.85507246376812" y="314.0625"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="Icon material-favorite" width="16" height="14"/>
-        <image name="Imagem 65" width="129" height="60.5"/>
+        <image name="Imagem 55" width="171.33332824707031" height="119"/>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray3Color">
+            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
