--- a/MarvelApp/MarvelApp/Detail/Character Detail/Header/TableView Cell/HeaderTableViewCell.xib
+++ b/MarvelApp/MarvelApp/Detail/Character Detail/Header/TableView Cell/HeaderTableViewCell.xib
@@ -13,7 +13,7 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeaderTableViewCell" rowHeight="718" id="KGk-i7-Jjw" customClass="HeaderTableViewCell" customModule="MarvelApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="390" height="718"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="390" height="718"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
@@ -24,10 +24,10 @@
                         </constraints>
                     </imageView>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p15-i1-lgg">
-                        <rect key="frame" x="0.0" y="201" width="415" height="516"/>
+                        <rect key="frame" x="0.0" y="201" width="415" height="517"/>
                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="516" id="bo8-ck-Pf9"/>
+                            <constraint firstAttribute="height" constant="517" id="bo8-ck-Pf9"/>
                         </constraints>
                     </view>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="JE9-NX-mKH">
@@ -70,6 +70,9 @@
                                             <constraint firstAttribute="width" constant="20" id="CrH-VT-kUJ"/>
                                         </constraints>
                                         <state key="normal" image="Icon material-favorite"/>
+                                        <connections>
+                                            <action selector="tappedFavoriteButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="1xd-vw-PrO"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -94,13 +97,13 @@
                         </constraints>
                     </stackView>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="aN3-7F-hbP">
-                        <rect key="frame" x="0.0" y="478.66666666666674" width="390" height="224"/>
+                        <rect key="frame" x="0.0" y="479" width="390" height="224"/>
                         <color key="backgroundColor" systemColor="systemGray3Color"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="224" id="lFE-T3-AwV"/>
                         </constraints>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="EGP-GP-0NA">
-                            <size key="itemSize" width="128" height="128"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="EGP-GP-0NA">
+                            <size key="itemSize" width="170" height="220"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -128,6 +131,13 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="characterImage" destination="2Ux-WJ-ItJ" id="YeA-46-5WB"/>
+                <outlet property="collectionController" destination="aN3-7F-hbP" id="7YZ-IC-2kr"/>
+                <outlet property="descriptionLabel" destination="iqP-V8-tZj" id="B02-uX-dtd"/>
+                <outlet property="favoriteButton" destination="jUa-8D-Evr" id="VID-lX-oaM"/>
+                <outlet property="favoriteLabel" destination="Bmf-2A-V4Y" id="VxY-5e-hsB"/>
+                <outlet property="nameCharacterLabel" destination="jRS-9T-COa" id="57g-mR-E7v"/>
+                <outlet property="progressView" destination="HOG-ds-TRb" id="3N8-zh-dv6"/>
+                <outlet property="subNameLabel" destination="Mti-yc-F6c" id="dQb-WN-ksk"/>
                 <outlet property="subView" destination="p15-i1-lgg" id="ueT-Vx-ge7"/>
             </connections>
             <point key="canvasLocation" x="189.85507246376812" y="314.0625"/>
