--- a/MarvelApp/MarvelApp/Detail/Character Detail/Header/TableView Cell/HeaderTableViewCell.xib
+++ b/MarvelApp/MarvelApp/Detail/Character Detail/Header/TableView Cell/HeaderTableViewCell.xib
@@ -98,7 +98,7 @@
                     </stackView>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="aN3-7F-hbP">
                         <rect key="frame" x="0.0" y="479" width="390" height="224"/>
-                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="224" id="lFE-T3-AwV"/>
                         </constraints>
@@ -146,11 +146,11 @@
     <resources>
         <image name="Icon material-favorite" width="16" height="14"/>
         <image name="Imagem 55" width="171.33332824707031" height="119"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGray3Color">
-            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
