--- a/MarvelApp/MarvelApp/Detail/Character Detail/DetailExpationImg.storyboard
+++ b/MarvelApp/MarvelApp/Detail/Character Detail/DetailExpationImg.storyboard
@@ -4,70 +4,58 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Detail Expation Img-->
-        <scene sceneID="qJ2-HD-qaa">
+        <scene sceneID="kb5-3I-GWL">
             <objects>
-                <viewController id="Tl9-gr-oPa" customClass="DetailExpationImg" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="wAi-e3-9Hw">
+                <viewController storyboardIdentifier="DetailExpationImg" modalPresentationStyle="fullScreen" id="dhy-Sc-twm" customClass="DetailExpationImg" customModule="MarvelApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fnB-Nf-fSI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hm2-HD-Wen">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Imagem 55" translatesAutoresizingMaskIntoConstraints="NO" id="TeG-Bk-3Tb">
-                                        <rect key="frame" x="0.0" y="120" width="414" height="656"/>
-                                    </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SSD-ne-qNq">
-                                        <rect key="frame" x="8" y="52" width="25" height="25"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="25" id="I1e-mQ-MJA"/>
-                                            <constraint firstAttribute="height" constant="25" id="VaC-DO-bK3"/>
-                                        </constraints>
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" image="chevron.backward" catalog="system"/>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Imagem 55" translatesAutoresizingMaskIntoConstraints="NO" id="Btf-pN-2r0">
+                                <rect key="frame" x="20" y="94" width="374" height="718"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9KH-7c-LCM">
+                                <rect key="frame" x="20" y="44" width="40" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="TeG-Bk-3Tb" secondAttribute="bottom" constant="120" id="IgQ-40-0cU"/>
-                                    <constraint firstAttribute="trailing" secondItem="TeG-Bk-3Tb" secondAttribute="trailing" id="VFr-IX-cIU"/>
-                                    <constraint firstItem="TeG-Bk-3Tb" firstAttribute="top" secondItem="Hm2-HD-Wen" secondAttribute="top" constant="120" id="VSI-Ys-3UM"/>
-                                    <constraint firstItem="SSD-ne-qNq" firstAttribute="top" secondItem="Hm2-HD-Wen" secondAttribute="top" constant="52" id="XId-4k-GBg"/>
-                                    <constraint firstItem="TeG-Bk-3Tb" firstAttribute="leading" secondItem="Hm2-HD-Wen" secondAttribute="leading" id="cRx-O5-6ds"/>
-                                    <constraint firstItem="SSD-ne-qNq" firstAttribute="leading" secondItem="Hm2-HD-Wen" secondAttribute="leading" constant="8" id="sIB-OQ-oaC"/>
+                                    <constraint firstAttribute="width" constant="40" id="hcO-fL-Mt4"/>
+                                    <constraint firstAttribute="height" constant="40" id="xNN-Em-nIL"/>
                                 </constraints>
-                            </view>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" image="chevron.backward" catalog="system">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                                </state>
+                                <connections>
+                                    <action selector="tappedBackButton:" destination="dhy-Sc-twm" eventType="touchUpInside" id="c59-1g-RFd"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="FUY-4A-i6h"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <viewLayoutGuide key="safeArea" id="bq8-1y-kRt"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Hm2-HD-Wen" firstAttribute="leading" secondItem="FUY-4A-i6h" secondAttribute="leading" id="2lG-pr-dDQ"/>
-                            <constraint firstItem="Hm2-HD-Wen" firstAttribute="top" secondItem="wAi-e3-9Hw" secondAttribute="top" id="NQ7-7F-5Th"/>
-                            <constraint firstItem="Hm2-HD-Wen" firstAttribute="trailing" secondItem="FUY-4A-i6h" secondAttribute="trailing" id="Tr1-Rq-pAX"/>
-                            <constraint firstAttribute="bottom" secondItem="Hm2-HD-Wen" secondAttribute="bottom" id="vzP-c6-PjZ"/>
+                            <constraint firstItem="Btf-pN-2r0" firstAttribute="top" secondItem="bq8-1y-kRt" secondAttribute="top" constant="50" id="56i-vF-xte"/>
+                            <constraint firstItem="bq8-1y-kRt" firstAttribute="bottom" secondItem="Btf-pN-2r0" secondAttribute="bottom" constant="50" id="5dt-Fs-Cfx"/>
+                            <constraint firstItem="Btf-pN-2r0" firstAttribute="leading" secondItem="bq8-1y-kRt" secondAttribute="leading" constant="20" id="FDu-gX-4yQ"/>
+                            <constraint firstItem="9KH-7c-LCM" firstAttribute="leading" secondItem="bq8-1y-kRt" secondAttribute="leading" constant="20" id="GcF-ye-e5R"/>
+                            <constraint firstItem="9KH-7c-LCM" firstAttribute="top" secondItem="bq8-1y-kRt" secondAttribute="top" id="f4n-YD-8X2"/>
+                            <constraint firstItem="bq8-1y-kRt" firstAttribute="trailing" secondItem="Btf-pN-2r0" secondAttribute="trailing" constant="20" id="qw9-hS-njj"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="backButton" destination="SSD-ne-qNq" id="Rtf-QQ-O6h"/>
-                        <outlet property="image" destination="TeG-Bk-3Tb" id="mE0-oD-GAN"/>
-                        <outlet property="tappedBackButton" destination="SSD-ne-qNq" id="CeI-xS-7Ks"/>
+                        <outlet property="backButton" destination="9KH-7c-LCM" id="lBl-B8-YJa"/>
+                        <outlet property="image" destination="Btf-pN-2r0" id="z7D-6b-muO"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="E80-qI-Rz5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FGn-Rw-bqx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-210.1449275362319" y="30.803571428571427"/>
+            <point key="canvasLocation" x="-366" y="47"/>
         </scene>
     </scenes>
     <resources>
         <image name="Imagem 55" width="171.5" height="119"/>
         <image name="chevron.backward" catalog="system" width="96" height="128"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
