Configurei o Background do Storyboard

--- a/MarvelApp/MarvelApp/Forgot The Password/ForgotPassword.storyboard
+++ b/MarvelApp/MarvelApp/Forgot The Password/ForgotPassword.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,18 +14,31 @@
                     <view key="view" contentMode="scaleToFill" id="r3A-mG-FqV">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LoginScreen-1" translatesAutoresizingMaskIntoConstraints="NO" id="Y7C-gQ-M47">
+                                <rect key="frame" x="0.0" y="-43" width="414" height="999"/>
+                                <color key="backgroundColor" red="0.0018300657389999999" green="0.065738312899999998" blue="0.11562288549999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <edgeInsets key="layoutMargins" top="-142" left="695" bottom="1015" right="-59"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="kDH-aJ-4ZD"/>
-                        <color key="backgroundColor" systemColor="systemBlueColor"/>
+                        <color key="backgroundColor" red="0.0018300657389999999" green="0.065738312899999998" blue="0.11562288549999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" red="0.0018300657389999999" green="0.065738312899999998" blue="0.11562288549999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Y7C-gQ-M47" firstAttribute="leading" secondItem="kDH-aJ-4ZD" secondAttribute="leading" id="Hwj-dS-5Y4"/>
+                            <constraint firstItem="Y7C-gQ-M47" firstAttribute="top" secondItem="r3A-mG-FqV" secondAttribute="top" constant="-43" id="KND-Um-yhW"/>
+                            <constraint firstAttribute="bottom" secondItem="Y7C-gQ-M47" secondAttribute="bottom" constant="-60" id="NXe-df-mRw"/>
+                            <constraint firstItem="Y7C-gQ-M47" firstAttribute="trailing" secondItem="kDH-aJ-4ZD" secondAttribute="trailing" id="T7o-VQ-Obg"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CjZ-bx-ST4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="9" y="-2"/>
+            <point key="canvasLocation" x="8.6956521739130448" y="-2.0089285714285712"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="LoginScreen-1" width="231.66667175292969" height="338.33334350585938"/>
     </resources>
 </document>
